# AppBlocker

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
.cargo/: config.toml
assets/: appblocker.desktop
src/: blocker.rs  config.rs  daemon.rs  main.rs  monitor.rs  network.rs  notification.rs  startup.rs  tray.rs  usage_tracker.rs
src/ui/: mod.rs  monitor_tab.rs  network_tab.rs  rule_editor.rs  rules_tab.rs  sessions_tab.rs  settings_tab.rs  usage_tab.rs
