[package]
name = "appblocker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "appblocker"
path = "src/main.rs"

[dependencies]
eframe       = "0.28"
egui         = "0.28"
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
procfs       = "0.16"
notify-rust  = "4"
chrono       = { version = "0.4", features = ["serde"] }
anyhow       = "1"
ksni         = "0.2"
uuid         = { version = "1", features = ["v4"] }
log          = "0.4"
env_logger   = "0.11"
dirs         = "5"
libc         = "0.2"

[profile.release]
strip = true      # This removes the "map" that connects addresses to code
panic = "abort"   # Optional: reduces binary size and some path info
